--- a/cell01/ex04/basics.html
+++ b/cell01/ex04/basics.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-    <h1 class="main-title">✧ TEA🍵 ✧</h1>
+    <h1 class="main-title">✧ Basics ✧</h1>
 
     <div class="shops-container">
         <div class="shop-item">
