--- a/Rush/resume_me.html
+++ b/Rush/resume_me.html
@@ -65,7 +65,7 @@
             <h2 class="mb-4 section-title">Education</h2>
             <p class="education-faculty">คณะบริหารธุรกิจ</p>
             <p class="education-major">สาขาเศรษฐศาสตร์ธุรกิจและการจัดการ</p>
-            <p class="education-university">สถาบันพระจอมเกล้าเจ้าคุณทหาร</p>
+            <p class="education-university">สถาบันพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
         </div>
     </section>
 
