--- a/Rush/resume_friend.html
+++ b/Rush/resume_friend.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Friend's Resume</title> 
+    <title>My Resume</title> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Sarabun&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow">
         <div class="container">
-            <a class="navbar-brand" href="#">Friend's Resume</a></button>
+            <a class="navbar-brand" href="#">My Resume</a></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#profile-header">Profile</a></li>
@@ -28,7 +28,7 @@
         <div class="container">
             <img src="https://i.pravatar.cc/150?u=friend" class="profile-photo my-4" alt="Friend's Photo">
             <h1 class="display-4">ชื่อ-นามสกุลของเพื่อน</h1>
-            <p class="lead">ตำแหน่งงานของเพื่อน</p>
+            <p class="lead">นักศึกษาชั้นปีที่ 1</p>
         </div>
     </header>
 
@@ -59,9 +59,9 @@
     <section id="education" class="py-5">
         <div class="container text-center">
             <h2 class="mb-4 section-title">Education</h2>
-            <p class="education-faculty">คณะของเพื่อน</p>
-            <p class="education-major">สาขาของเพื่อน</p>
-            <p class="education-university">มหาวิทยาลัยของเพื่อน</p>
+            <p class="education-faculty">คณะบริหารธุรกิจ</p>
+            <p class="education-major">สาขาเศรษฐศาสตร์ธุรกิจและการจัดการ</p>
+            <p class="education-university">สถาบันพระจอมเกล้าเจ้าคุณทหารลาดกระบัง</p>
         </div>
     </section>
 
