--- a/Rush/index.html
+++ b/Rush/index.html
@@ -23,7 +23,7 @@
             
             <a href="resume_friend.html" class="profile-card-link">
                 <div class="profile-avatar-wrapper">
-                    <img src="https://i.pravatar.cc/300?u=friend" class="profile-avatar" alt="Friend's Avatar">
+                    <img src="https://scontent.fbkk28-1.fna.fbcdn.net/v/t1.15752-9/552150544_1367118742080753_7066080706727563653_n.jpg?stp=dst-jpg_s480x480_tt6&_nc_cat=100&ccb=1-7&_nc_sid=0024fc&_nc_ohc=W8x2ZPltniUQ7kNvwF1kpqL&_nc_oc=AdmBMBfzKgKkV36cju3PPKsegLzg6zU7k6oi1qf-311bFNzAx7y0Pfff-E2Q9RiMpo0ZFgveMGdRMydfrSlDZukx&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fbkk28-1.fna&oh=03_Q7cD3QFzoeeiKEeTmpJOVcZvK3Iz62BnAwLmVlRnxc7N0Jsadw&oe=68FB8229" class="profile-avatar" alt="Avatar"width=100>
                 </div>
                 <span class="profile-name">tpoompua</span>
             </a>
