--- a/Rush/resume_friend.html
+++ b/Rush/resume_friend.html
@@ -26,9 +26,9 @@
 
     <header id="profile-header" class="text-center text-white">
         <div class="container">
-            <img src="https://i.pravatar.cc/150?u=friend" class="profile-photo my-4" alt="Friend's Photo">
-            <h1 class="display-4">ชื่อ-นามสกุลของเพื่อน</h1>
-            <p class="lead">นักศึกษาชั้นปีที่ 1</p>
+            <img src="https://scontent.fbkk28-1.fna.fbcdn.net/v/t1.15752-9/552150544_1367118742080753_7066080706727563653_n.jpg?stp=dst-jpg_s480x480_tt6&_nc_cat=100&ccb=1-7&_nc_sid=0024fc&_nc_ohc=W8x2ZPltniUQ7kNvwF1kpqL&_nc_oc=AdmBMBfzKgKkV36cju3PPKsegLzg6zU7k6oi1qf-311bFNzAx7y0Pfff-E2Q9RiMpo0ZFgveMGdRMydfrSlDZukx&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fbkk28-1.fna&oh=03_Q7cD3QFzoeeiKEeTmpJOVcZvK3Iz62BnAwLmVlRnxc7N0Jsadw&oe=68FB8229" class="profile-photo my-4" alt="Photo"height=200>
+            <h1 class="display-4">นายฐิติพล พุ่มพวง</h1>
+            <p class="lead">นักศึกษาชั้นปี 1</p>
         </div>
     </header>
 
@@ -41,11 +41,11 @@
                 <div class="col-md-8 mx-auto">
                     <p>HTML</p>
                     <div class="progress mb-3" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar" style="width: 70%">Intermediate</div>
+                        <div class="progress-bar" style="width: 40%">Intermediate</div>
                     </div>
                     <p>CSS & Bootstrap</p>
                     <div class="progress mb-3" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar" style="width: 60%">Intermediate</div>
+                        <div class="progress-bar" style="width: 30%">Basic</div>
                     </div>
                     <p>JavaScript</p>
                     <div class="progress mb-3" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
@@ -69,8 +69,9 @@
         <div class="container">
             <h2>Contact Me</h2>
             <p>
-                <strong>Email:</strong> <a href="mailto:friend.email@example.com">friend.email@example.com</a> |
-                <strong>GitHub:</strong> <a href="#">Friend's GitHub Profile</a>
+                <strong>Email:</strong> <a href="68100040@kmitl.ac.th">68100040@kmitl.ac.th</a> |
+                <strong>GitHub:</strong> <a href="https://github.com/DiscoveryPiscine42Bangkok2025/discovery-piscine-fun-with-coding-20-25-sep-2025-68100040-code/">Click here</a>
+                <strong>instagram:</strong> <a href="https://www.instagram.com/tt_4youu?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Click here</a>
             </p>
             <a href="index.html" class="btn btn-outline-gold mt-4">Back to Home</a>
         </div>
