--- a/Rush/resume_me.html
+++ b/Rush/resume_me.html
@@ -44,11 +44,11 @@
                 <div class="col-md-8 mx-auto">
                     <p>HTML</p>
                     <div class="progress mb-3" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar" style="width: 70%">Intermediate</div>
+                        <div class="progress-bar" style="width: 50%">Intermediate</div>
                     </div>
                     <p>CSS & Bootstrap</p>
                     <div class="progress mb-3" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                        <div class="progress-bar" style="width: 60%">Intermediate</div>
+                        <div class="progress-bar" style="width: 40%">Intermediate</div>
                     </div>
                     <p>JavaScript</p>
                     <div class="progress mb-3" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
@@ -74,7 +74,8 @@
             <h2>Contact Me</h2>
             <p>
                 <strong>Email:</strong> <a href="mailto:68100347@kmitl">68100347@kmitl.ac.th</a> |
-                <strong>My GitHub:</strong> <a href="https://github.com/DiscoveryPiscine42Bangkok2025/discovery-piscine-fun-with-coding-20-25-sep-2025-tpwong347/tree/main">GitHub</a>
+                <strong>My GitHub:</strong> <a href="https://github.com/DiscoveryPiscine42Bangkok2025/discovery-piscine-fun-with-coding-20-25-sep-2025-tpwong347/tree/main">Click here</a>
+                <strong>Instagram:</strong> <a href="https://www.instagram.com/con_flore?igsh=MzVrdzBrcmRtNmtw">Click here</a>
             </p>
             <a href="index.html" class="btn btn-outline-gold mt-4">Back to Home</a>
         </div>
